--- a/results.html
+++ b/results.html
@@ -7,9 +7,9 @@
     <script>
         // Initialize Firebase
         const config = {
-            apiKey: "AIzaSyAtBEAlA4WI0VDuhRB0f3zYpb6CoI6a_zE",
-            databaseURL: "https://agile-survey.firebaseio.com",
-            projectId: "agile-survey"
+           apiKey: "AIzaSyB2ZuSrX5nK-ktc4bFClyGc1HBsAUQFsjk",
+            databaseURL: "https://survey-scrum.firebaseio.com",
+            projectId: "https://survey-scrum.firebaseio.com"
         };
         firebase.initializeApp(config);
     </script>
